# processual-maestro-kernel

./: .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_EXTERNAL.md  Dockerfile  EXTERNAL_READINESS_REPORT.md  FINAL_READINESS_REPORT.md  MAESTRO_GATEWAY_MULTI_AGENT_PROOF.md  README.md  RELEASE_NOTES.md  SECURITY.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  fix_ascii_labels.py  fix_gateway_policies_ascii.py  fix_policy_engine_ascii.py  patch_repair_loop_accept_exit.py  patch_repair_loop_client_query.py  pyproject.toml  readiness_report.html  repair_loop_writer.py  run_ollama_maestro_repair_loop.py  run_ollama_to_maestro.py
.github/workflows/: ci-public.yml  ci.yml  docker.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 20260721_0001_identity_auth_foundation.py  20260722_0002_identity_terms_acceptance.py  20260722_0003_auth_delivery_outbox.py  20260722_0004_auth_email_verification_lifecycle.py  20260722_0005_auth_delivery_dispatcher.py  20260722_0006_platform_authority.py  20260723_0007_admin_recovery_email_supervisor_authority.py  20260723_0008_recovery_email_verification_tokens.py  20260723_0009_account_recovery_foundation.py  (+1 more)
cgtlib/: __init__.py  _fallback.py  aftermath.py  api.py  batch.py  benchmark_surfaces.py  catalogs.py  comparative_envelopes.py  compatibility.py  constants.py  errors.py  evaluators.py  existence.py  fate.py  fixtures.py  gates.py  invariants.py  lift.py  locking.py  metadata.py  phase.py  possibility.py  pyproject.toml  reference_data.py  regime_classifiers.py  retention.py  robustness.py  robustness_profiles.py  scenarios.py  sensitivity.py  serialization.py  simulation.py  stress_regimes.py  trajectory_maps.py  transition_archetypes.py  types.py  validation.py
docs/: API_KEYS_IMPLEMENTATION_REPORT.md  CLIENT_DEMO_AND_PILOT_GUIDE_AR_EN.md  EXTERNAL_PILOT_MESSAGE_AR_EN_FR.md  PROJECT_STATUS.md  PUBLIC_RUNTIME_PROOF_AR_EN.md  REPOSITORY_SCOPE_AR.md  STAGE18_SUPERVISOR_ENTERPRISE_KEY_FLOW.md  admin_supervisor_workspace_inventory.md  development-report-ar.md  implementation-report-ar.md  index.html  index.md
docs/api/: eval_id.md  (+6 more)
examples/: adaptive_usage.py  basic_usage.py  demo_full_flow.py  maestro_workflow.py
processual_api/: __init__.py  admin_audit_log.py  dependencies.py  main.py  settings.py  supervision_rbac.py  supervisor_session_keys.py
processual_kernel/: __init__.py  adaptive_toolkit.py  adaptive_types.py  audit.py  cgt_bridge.py  continuity.py  governor.py  kernel.py  types.py
scripts/: build_clean_release.py  clean_dev_artifacts.py  release_check.py  run_external_pilot.py  run_multi_agent_governance.py
tests/: test_adapter_configure_status_routes.py  test_adapter_readiness_endpoint.py  test_adapter_registry.py  test_adapter_test_readiness_behavior.py  test_admin_adapter_area_regression.py  test_admin_api_key_external_usage_logging_regression.py  test_admin_api_key_external_usage_regression.py  test_admin_api_key_lifecycle_regression.py  test_admin_api_key_lifecycle_summary_ui.py  test_admin_api_key_profile_payload_regression.py  test_admin_api_key_profiles_regression.py  test_admin_api_key_valid_runtime_acceptance_regression.py  test_admin_api_keys_13e_final_regression.py  test_admin_api_keys_area_regression.py  test_admin_api_keys_cards_css_13e_h3.py  test_admin_api_keys_error_formatting_13d_f2.py  test_admin_api_keys_metadata_cards_13e_h2.py  test_admin_api_keys_populated_cards_13e_h4.py  test_admin_api_keys_raw_marker_labels_13e_d2.py  test_admin_api_keys_static_ids_13e.py  test_admin_area_shell_regression.py  test_admin_audit_log.py  test_admin_auth_bridge_regression.py  test_admin_backend_dashboard_regression.py  test_admin_backend_readiness_audit.py  test_admin_client_request_apply_plan_regression.py  test_admin_client_request_apply_plan_ui.py  test_admin_client_request_detail_regression.py  test_admin_client_request_integration_readiness_workflow_11m.py  test_admin_client_request_response_draft_regression.py  test_admin_client_request_status_actions_regression.py  test_admin_client_request_supervisor_response_lifecycle_regression.py  test_admin_client_request_supervisor_response_regression.py  test_admin_client_requests_inbox_regression.py  test_admin_clients_api_key_quick_bridge_ui.py  test_admin_direct_client_plan_setting.py  test_admin_direct_client_plan_ui.py  test_admin_endpoint_registry_regression.py  test_admin_entry_from_login_regression.py  test_admin_home_layout_regression.py  (+297 more)
tools/: split-public-repo.ps1
(+428 files in other folders)
