[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "processual-maestro-kernel"
version = "2.0.0"
description = "Production-ready Processual Maestro Kernel with CGT v2, security layer, backend API, observability, and Discord monitoring."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "Zakaria Essamit / ChatGPT implementation"}]
dependencies = ["cryptography>=41", "bcrypt>=4.1", "tzdata>=2024.1; platform_system == \"Windows\""]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "orjson>=3.10",
  "httpx>=0.27",
]
security = [
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.1",
]
database = [
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
]
cache = [
  "redis>=5.0",
]
observability = [
  "prometheus-client>=0.20",
  "sentry-sdk[fastapi]>=2",
]
llm = [
  "openai>=1.55",
  "anthropic>=0.50",
  "google-genai>=1.0",
]
reports = [
  "reportlab>=4.2",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-asyncio>=0.23",
  "hypothesis>=6",
  "ruff>=0.6",
  "mypy>=1.10",
  "flake8>=7",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "build>=1.2",
  "twine>=5",
]
load = [
  "locust>=2.31",
]
all = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "orjson>=3.10",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.1",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "prometheus-client>=0.20",
  "sentry-sdk[fastapi]>=2",
  "openai>=1.55",
  "anthropic>=0.50",
  "google-genai>=1.0",
  "reportlab>=4.2",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-asyncio>=0.23",
  "hypothesis>=6",
  "ruff>=0.6",
  "mypy>=1.10",
  "flake8>=7",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "build>=1.2",
  "twine>=5",
  "locust>=2.31",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["processual_kernel*", "cgtlib*", "processual_api*"]

[tool.pytest.ini_options]
addopts = "-p no:ddtrace"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cgtlib", "processual_kernel", "processual_api"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"processual_api/cgt_governor/reports/llm_reporter.py" = ["E501"]

[tool.flake8]
max-line-length = 120
max-complexity = 15
extend-ignore = "E203, W503"

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "cgtlib.reference_data"
disable_error_code = ["call-overload", "arg-type", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "processual_kernel.audit",
    "processual_kernel.adaptive.ui",
    "processual_kernel.adaptive.persistence",
    "processual_kernel.adaptive.efficiency",
    "processual_kernel.adaptive.encryption",
    "processual_kernel.adaptive.certification",
    "processual_kernel.adaptive.ops_governance",
    "processual_kernel.security.crypto",
    "cgtlib.serialization",
]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "processual_api.cgt_governor.gateway.registry"
disable_error_code = ["valid-type"]

[[tool.mypy.overrides]]
module = "processual_api.db.session"
disable_error_code = ["misc", "assignment"]

[[tool.mypy.overrides]]
module = "processual_api.cache.redis"
disable_error_code = ["assignment", "misc"]

[[tool.mypy.overrides]]
module = [
    "processual_kernel.adaptive_types",
    "processual_kernel.adaptive.task_profiler",
    "processual_kernel.adaptive.safety",
    "processual_kernel.observability.metrics",
    "processual_kernel.observability.sentry",
    "processual_kernel.adaptive.encryption",
    "processual_kernel.kernel",
    "processual_kernel.adaptive_toolkit",
    "cgtlib.sensitivity",
    "cgtlib.robustness",
]
ignore_errors = true
